--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -120,16 +120,16 @@ The book has been successfully used in data science courses at the University of
 
 ## Datasets Used in This Book {.unnumbered}
 
-This book incorporates real-world datasets to support its hands-on, application-focused approach to learning. These datasets are used throughout the chapters to demonstrate key data science and machine learning techniques, particularly in the end-of-chapter case studies. [Table -@tbl-data-table] provides an overview of the core datasets featured in the book, all of which are included in the **liver** package.
+This book integrates real-world datasets to support its applied, hands-on approach to learning data science and machine learning. These datasets are used throughout the chapters to illustrate key concepts, demonstrate analytical techniques, and guide readers through full case studies. [Table -@tbl-data-table] summarizes the core datasets featured in the book, most of which are included in the **liver** package (except the *diamonds* dataset, available in the **ggplot2** package). All datasets from **liver** can be directly accessed in R for seamless replication of examples.
 
 ```{r}
 #| label: tbl-data-table
 #| echo: false
-#| tbl-cap: "Overview of datasets used for case studies in different chapters. All datasets are included in the R package liver."
+#| tbl-cap: "Overview of datasets used for case studies in different chapters. All datasets are included in the R package liver, except the diamonds dataset, which is available in the ggplot2 package."
 #| out.width: NULL
 
 datasets = data.frame( 
-  Name = c("churn", "bank", "adult", "risk", "marketing", "house", "diamonds", "cereal"),
+  Name = c("churn", "bank", "adult", "risk", "marketing", "house", "diamonds", "cereal", "churnCredit", "churnTel", "caravan", "insurance", "housePrice", "drug", "redWines", "whiteWines"),
   Description = c(
     "Customer churn dataset.", 
     "Direct marketing data from a Portuguese bank.", 
@@ -138,9 +138,33 @@ datasets = data.frame(
     "Marketing campaign performance data.", 
     "House price prediction dataset.", 
     "Diamond pricing dataset.", 
-    "Nutritional information for 77 breakfast cereals."
+    "Nutritional information for 77 breakfast cereals.",
+    "Customer churn in the credit card industry.",
+    "Customer churn in the telecommunications industry.",
+    "Customer data for insurance purchase prediction.",
+    "Insurance policyholder data.",
+    "House price data from Ames, Iowa.",
+    "Drug consumption dataset.",
+    "Red wine quality dataset.",
+    "White wine quality dataset."
   ),
-  Chapter = c("Chapters 4, 6, 7, 8, 10", "Chapters 7, 12", "Chapters 3, 11", "Chapter 9", "Chapter 10", "Chapter 10", "Chapter 3", "Chapter 13")
+  Chapter = c("Chapters 4, 6, 7, 8, 10", 
+              "Chapters 7, 12", 
+              "Chapters 3, 11", 
+              "Chapter 9", 
+              "Chapter 10", 
+              "Chapter 10", 
+              "Chapter 3", 
+              "Chapter 13", 
+              "Chapter 9",
+              "Chapter 4",
+              "Chapter 11",
+              "Chapter 10",
+              "Chapter 3",
+              "Chapter 7",
+              "Chapters 11, 13",
+              "Chapter 13"
+              )
 )
 
 kbl(datasets, booktabs = T) %>%
@@ -149,9 +173,11 @@ column_spec(1, bold = F, color = "black") %>%
 column_spec(2, width = "20em")
 ```
 
-These datasets were selected to expose readers to practical challenges from a variety of domains, including marketing, finance, and predictive modeling. They are used throughout the book not only in examples and guided code but also in case studies that walk through the full Data Science Workflow.
+These datasets were selected to expose readers to a broad range of real-world challenges spanning marketing, finance, customer analytics, and predictive modeling. They appear throughout the book not only in guided examples and code demonstrations but also in comprehensive case studies that follow the full Data Science Workflow.
 
-In addition to the datasets listed in [Table -@tbl-data-table], the **liver** package contains over 15 datasets. Several of these appear in exercises at the end of each chapter, providing readers with further opportunities to practice techniques, explore new data contexts, and reinforce their learning beyond the main examples.
+All datasets from the **liver** package can be loaded directly in R using the `data()` function (for example, `data(churn)`) and explored with standard functions such as `str()`, `summary()`, and `head()`. Readers can also access documentation and original dataset sources through the package reference page at [https://cran.r-project.org/web/packages/liver/refman/liver.html](https://cran.r-project.org/web/packages/liver/refman/liver.html).
+
+Beyond the datasets listed in [Table -@tbl-data-table], the **liver** package includes more than 15 datasets in total. Several of these appear in end-of-chapter exercises, offering readers further opportunities to practice data exploration, modeling, and evaluation across diverse contexts.
 
 ## How to Teach with This Book {.unnumbered}
 
