--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -478,128 +478,179 @@ We examined three common variants, multinomial, Bernoulli, and Gaussian, each su
 
 While this chapter focused on a generative probabilistic model, the next chapter introduces **logistic regression**, a discriminative linear model that estimates the log-odds of class membership. Logistic regression provides a useful complement to Naive Bayes, particularly when modeling predictor relationships and interpreting coefficients are central to the analysis.
 
+
 ## Exercises {#sec-ch9-exercises}
 
-This section reinforces your understanding of Naive Bayes through conceptual questions, applied tasks, and real-world scenarios.
+The following exercises are designed to strengthen your understanding of the Naive Bayes classifier and its practical applications. They progress from conceptual questions that test your grasp of probabilistic reasoning and model assumptions, to hands-on analyses using the *churn* and *churnCredit* datasets from the **liver** package. Together, these tasks guide you through data preparation, model training, evaluation, and interpretation—helping you connect theoretical principles to real-world predictive modeling.
 
 #### Conceptual Questions {.unnumbered}
 
-1.  Why is Naive Bayes considered a probabilistic classification model?
+1. Why is Naive Bayes considered a probabilistic classification model?
 
-2.  What is the difference between prior probability, likelihood, and posterior probability in Bayes’ theorem?
+2. What is the difference between prior probability, likelihood, and posterior probability in Bayes’ theorem?
 
-3.  What does it mean when we say Naive Bayes assumes feature independence?
+3. What does it mean that Naive Bayes assumes feature independence?
 
-4.  In which situations does the feature independence assumption become problematic? Provide an example.
+4. In which situations does the feature independence assumption become problematic? Provide an example.
 
-5.  What are the key strengths of Naive Bayes? Why is it widely used in text classification and spam filtering?
+5. What are the main strengths of Naive Bayes? Why is it widely used in text classification and spam filtering?
 
-6.  What are the major limitations of Naive Bayes, and how do they impact its performance?
+6. What are its major limitations, and how do they affect performance?
 
-7.  How does Laplace smoothing help in handling missing feature values in Naive Bayes? *Hint: See Section [-@sec-ch9-laplace] for how smoothing helps prevent zero probabilities.*
+7. How does Laplace smoothing prevent zero probabilities in Naive Bayes? *Hint: See Section [-@sec-ch9-laplace].*
 
-8.  When should you use multinomial Naive Bayes, Bernoulli Naive Bayes, or Gaussian Naive Bayes? *Hint: See Section [-@sec-ch9-types] and consider feature types and their distributions.*
+8. When should you use multinomial, Bernoulli, or Gaussian Naive Bayes? *Hint: See Section [-@sec-ch9-types].*
 
-9.  Compare the Naive Bayes classifier to the k-Nearest Neighbors algorithm (Chapter [-@sec-ch7-classification-knn]). How do their assumptions and outputs differ?
+9. Compare Naive Bayes to k-Nearest Neighbors (Chapter [-@sec-ch7-classification-knn]). How do their assumptions differ?
 
-10. How does changing the probability threshold influence the predicted classes and performance metrics?
+10. How does changing the probability threshold affect predictions and evaluation metrics?
 
-11. Why does Naive Bayes remain effective even when the independence assumption is violated?
+11. Why can Naive Bayes remain effective even when the independence assumption is violated?
 
-12. What type of dataset characteristics make Naive Bayes perform poorly compared to other classifiers?
+12. What dataset characteristics typically cause Naive Bayes to perform poorly?
 
-13. How does the Gaussian Naive Bayes classifier handle continuous data?
+13. How does Gaussian Naive Bayes handle continuous variables?
 
-14. How can domain knowledge help improve Naive Bayes classification results?
+14. How can domain knowledge improve Naive Bayes results?
 
-15. How would Naive Bayes handle imbalanced datasets? What preprocessing techniques could help?
+15. How does Naive Bayes handle imbalanced datasets? What preprocessing strategies help?
 
-16. Explain how prior probabilities can be adjusted based on business objectives in a classification problem.
+16. How can prior probabilities be adjusted to reflect business priorities?
 
 #### Hands-On Practice: Naive Bayes with the *churn* Dataset {.unnumbered}
 
-For the following exercises, we will use the *churn* dataset from the **liver** package. This dataset contains information about customer subscriptions, and our goal is to predict whether a customer will churn (`churn = yes/no`) using the Naive Bayes classifier. In Section [-@sec-ch4-EDA-churn], we performed exploratory data analysis to understand the dataset’s structure and key features.
+The *churn* dataset from the **liver** package contains information about customer subscriptions. The goal is to predict whether a customer will churn (`churn = yes/no`) using Naive Bayes. See Section [-@sec-ch4-EDA-churn] for prior exploration.
 
 ##### Data Setup to Model {.unnumbered}
 
-17. Load the **liver** package and the *churn* dataset:
+17. Load the dataset and inspect its structure:
 
-```{r}
+```r
 library(liver)
 
-data(churn)
+data(churn, package = "liver")
 ```
 
-18. Display the structure and summary statistics of the dataset to examine its variables and their distributions.
+18. Summarize key variables and their distributions.
 
-19. Split the dataset into an 80% training set and a 20% test set using the `partition()` function from the **liver** package.
+19. Partition the data into 80% training and 20% test sets using `partition()` from **liver**.
 
-20. Confirm that the training and test sets have similar distributions of the `churn` variable by comparing proportions.
+20. Confirm that the class distribution of `churn` is similar across both sets.
 
-##### Training and Evaluating the Naive Bayes Classifier {.unnumbered}
+##### Training and Evaluation {.unnumbered}
 
-21. Based on the exploratory data analysis in Section [-@sec-ch4-EDA-churn], select the following predictors for the Naive Bayes model: `account.length`, `voice.plan`, `voice.messages`, `intl.plan`, `intl.mins`, `day.mins`, `eve.mins`, `night.mins`, and `customer.calls`. Define the model formula:
+21. Define the model formula:
 
-``` r
+```r
 formula = churn ~ account.length + voice.plan + voice.messages +
                  intl.plan + intl.mins + day.mins + eve.mins +
                  night.mins + customer.calls
 ```
 
-22. Train a Naive Bayes classifier on the training set using the **naivebayes** package.
+22. Train a Naive Bayes model using the **naivebayes** package.
 
-23. Summarize the trained model. What insights can you gain from the estimated class-conditional probabilities?
+23. Summarize the model and interpret class-conditional probabilities.
 
-24. Use the trained model to predict class probabilities for the test set using the `predict()` function from the **naivebayes** package.
+24. Predict class probabilities for the test set.
 
-25. Extract and examine the first 10 probability predictions. Interpret what these values indicate about the likelihood of customer churn.
+25. Display the first ten predictions and interpret churn likelihoods.
 
-26. Compute the confusion matrix using the `conf.mat()` function with a classification threshold of 0.5. What does it reveal about prediction performance?
+26. Generate a confusion matrix with `conf.mat()` using a 0.5 threshold.
 
-27. Visualize the confusion matrix using the `conf.mat.plot()` function from the **liver** package.
+27. Visualize it with `conf.mat.plot()` from **liver**.
 
-28. Compute key evaluation metrics, including accuracy, precision, recall, and F1-score, based on the confusion matrix.
+28. Compute accuracy, precision, recall, and F1-score.
 
-29. Lower the classification threshold from 0.5 to 0.3 and recompute the confusion matrix. How does adjusting the threshold affect model performance?
+29. Adjust the threshold to 0.3 and observe the change in performance metrics.
 
-30. Plot the ROC curve and compute the AUC value. What does the AUC tell you about the model’s ability to distinguish between churn and non-churn customers?
+30. Plot the ROC curve and compute AUC.
 
-31. Train a Naive Bayes model with Laplace smoothing (`laplace = 1`) and compare the results to the model without smoothing. How does smoothing affect predictions?
+31. Retrain the model with Laplace smoothing (`laplace = 1`) and compare results.
 
-32. Compare the Naive Bayes classifier to the k-Nearest Neighbors algorithm (Chapter [-@sec-ch7-classification-knn]) trained on the same dataset. *Make sure both models use the same partitioning for fair comparison.* Evaluate their performance using accuracy, precision, recall, F1-score, and AUC. Which model performs better, and what factors might explain the differences in performance?
+32. Compare the Naive Bayes model to k-Nearest Neighbors using identical partitions.
 
-33. Experiment by removing one predictor variable at a time and retraining the model. How does this impact accuracy and other evaluation metrics?
+33. Remove one predictor at a time and re-evaluate model performance.
 
-34. Suppose the model performs unusually poorly on a subset of customers. How would you diagnose whether this is due to feature misrepresentation, class imbalance, or violations of the independence assumption?
+34. Diagnose poor performance on subsets of data: could it stem from class imbalance or correlated features?
 
-##### Critical Thinking {.unnumbered}
+#### Hands-On Practice: Naive Bayes with the *churnCredit* Dataset {.unnumbered}
 
-35. Suppose a telecommunications company wants to use this model to reduce customer churn. What business decisions could be made based on the model’s predictions?
+The *churnCredit* dataset from the **liver** package contains 10,127 customer records and 21 variables combining churn, credit, and demographic features. It allows you to evaluate how financial and behavioral variables jointly affect churn.
 
-36. If incorrectly predicting a false negative (missed churner) is more costly than a false positive, how should the decision threshold be adjusted?
+##### Data Setup for Modeling {.unnumbered}
 
-37. A marketing team wants to offer promotional discounts to customers predicted to churn. How would you use this model to target the right customers?
+35. Load the dataset:
 
-38. Suppose the dataset included a new feature: customer satisfaction score (on a scale from 1 to 10). How could this feature improve the model?
+```r
+library(liver)
 
-39. What steps would you take if the model performed poorly on new customer data?
+data(churnCredit, package = "liver")
+```
 
-40. Explain why feature independence may or may not hold in this dataset. How could feature correlation impact the model’s reliability?
+36. Inspect the structure and summary statistics. Identify the target variable (`churn`) and main predictors.
 
-41. Would Naive Bayes be suitable for multi-class classification problems? If so, how would you extend this model to predict multiple churn reasons instead of just `yes/no`?
+37. Partition the data into 80% training and 20% test sets using `partition()` from **liver**. Use `set.seed(9)` for reproducibility.
 
-42. If given time-series data about customer interactions over months, would Naive Bayes still be appropriate? Why or why not?
+38. Verify that the class distribution of `churn` is consistent between the training and test sets.
+
+##### Training and Evaluation {.unnumbered}
+
+39. Define a model formula with predictors such as `credit.score`, `age`, `tenure`, `balance`, `products.number`, `credit.card`, and `active.member`.
+
+40. Train a Naive Bayes classifier using the **naivebayes** package.
+
+41. Summarize the model and interpret key conditional probabilities.
+
+42. Predict outcomes for the test set and generate a confusion matrix with a 0.5 threshold.
+
+43. Compute evaluation metrics: accuracy, precision, recall, and F1-score.
+
+44. Plot the ROC curve and compute AUC.
+
+45. Retrain the model with Laplace smoothing (`laplace = 1`) and compare results.
+
+46. Adjust the classification threshold to 0.3 and note changes in sensitivity and specificity.
+
+47. Identify any predictors that might violate the independence assumption and discuss their potential effects on model performance.
+
+##### Reflection {.unnumbered}
+
+48. Compare results with the *churn* dataset. Does adding financial information improve predictive accuracy?
+
+49. How could this model support retention or credit risk management strategies?
+
+50. Identify the top three most influential predictors using feature importance or conditional probabilities. Do they differ from the most influential features in the *churn* dataset? What might this reveal about customer behavior?
+
+#### Critical Thinking {.unnumbered}
+
+51. How could a company use this model to inform business decisions related to churn?
+
+52. If false negatives are costlier than false positives, how should the decision threshold be adjusted?
+
+53. How might you use this model to target promotions for likely churners?
+
+54. Suppose a new feature, *customer satisfaction score*, were added. How could it improve predictions?
+
+55. How would you address poor model performance on new data?
+
+56. How might feature correlation affect Naive Bayes reliability?
+
+57. How could Naive Bayes be extended to handle multi-class classification problems?
+
+58. Would Naive Bayes be suitable for time-series churn data? Why or why not?
 
 #### Self-Reflection {.unnumbered}
 
-43. In your own words, what are the key strengths and limitations of the Naive Bayes classifier?
+59. Summarize the main strengths and limitations of Naive Bayes in your own words.
 
-44. How did the independence assumption shape the model’s structure and influence your interpretation of the results?
+60. How did the independence assumption influence your understanding of model behavior?
 
-45. Which stage of the case study (data preparation, training, or evaluation) most deepened your understanding of how Naive Bayes works in practice?
+61. Which stage—data preparation, training, or evaluation—most enhanced your understanding of Naive Bayes?
 
-46. How confident are you in applying Naive Bayes to a new dataset containing both categorical and numerical variables?
+62. How confident are you in applying Naive Bayes to datasets with mixed data types?
 
-47. If you were to extend this chapter, which topic would you explore further: smoothing techniques, alternative distributional assumptions, or methods for handling correlated features? Try one in a small experiment.
+63. Which extension would you explore next: smoothing, alternative distributions, or correlated features?
 
-48. Compared to earlier models like kNN or logistic regression, when do you think Naive Bayes would be a preferable choice? What trade-offs are involved?
+64. Compared to models like kNN or logistic regression, when is Naive Bayes preferable, and why?
+
+65. Reflect on how Naive Bayes connects back to the broader Data Science Workflow. At which stage does its simplicity provide the greatest advantage?
