--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -746,7 +746,7 @@ We now turn to regression tasks, using the *redWines* dataset from **liver** pac
 
 ##### Hands-On Practice: Regression with the redWines Dataset {.unnumbered}
 
-Now, apply what you have learned to a real-world regression problem.
+Apply your understanding to a practical regression problem.
 
 ##### Data Setup to Model {.unnumbered}
 
@@ -784,3 +784,39 @@ test_labels = test_set$quantity
 49. Perform cross-validation to compare the regression tree and Random Forest models.
 
 50. Reflect: Based on your findings, does the Random Forest significantly improve prediction accuracy compared to the single regression tree?
+
+##### Hands-On Practice: Regression with the *caravan* Dataset {.unnumbered}
+
+The *caravan* dataset from the **liver** package includes 5,822 customer records with 86 variables: 43 sociodemographic features and 43 indicators of insurance product ownership. The target variable, `Purchase`, shows whether a customer bought a caravan insurance policy. Originally collected for the CoIL 2000 Challenge, it aims to predict which customers are most likely to purchase such a policy.
+
+##### Data Setup to Model {.unnumbered}
+
+51. Load the *caravan* dataset and review its structure. Identify the response variable and the predictors.
+
+52. Partition the dataset into a training set (70%) and a test set (30%) using the `partition()` function from the **liver** package. Use `set.seed(42)` for reproducibility.
+
+##### Modeling and Evaluation {.unnumbered}
+
+53. Fit a regression tree predicting `Purchase` based on all available predictors. Interpret the main decision rules and identify the strongest predictors.
+
+54. Fit a Random Forest regression model using the same predictors and compare its performance with the regression tree using Mean Squared Error (MSE).
+
+55. Use `varImpPlot()` to identify the five most important predictors. Which types of variables (sociodemographic or product ownership) appear most influential?
+
+56. Predict the probability of caravan insurance purchase for a new customer with average sociodemographic characteristics and moderate ownership across other insurance products.
+
+57. Reflect: Does the Random Forest model substantially outperform the single regression tree? What insights can you draw about customer targeting and model interpretability?
+
+
+
+
+
+
+
+
+
+
+
+
+
+
