--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -636,92 +636,123 @@ Several principles emerged through this exploratory process. EDA is iterative an
 
 These findings lay the groundwork for the next stages of analysis. Equipped with the ability to uncover structure, spot data quality issues, and extract early insights, you are now ready to formalize these observations using statistical inference. In the following chapter, we introduce statistical tools to evaluate the significance of relationships observed here and begin building predictive models, starting with logistic regression and k-nearest neighbors, to estimate churn risk and support data-driven decisions.
 
+
+
+
 ## Exercises {#sec-ch4-exercises}
 
-The following exercises are designed to reinforce core principles of exploratory data analysis introduced in this chapter. They span conceptual understanding, hands-on implementation, and critical thinking. The section begins with interpretive questions, followed by applied analysis using the *bank* dataset, and concludes with advanced challenge problems for synthesis and reflection.
+The following exercises reinforce the core principles of exploratory data analysis (EDA) introduced in this chapter. They combine conceptual understanding, hands-on implementation, and higher-level synthesis tasks. Begin with conceptual questions to strengthen foundational ideas, proceed with applied EDA using the *bank* and *churnTel* datasets, and conclude with challenge problems that emphasize insight generation and reflection.
 
-#### Conceptual Questions {.unnumbered}
+### Conceptual Questions {.unnumbered}
 
-1.  Why is exploratory data analysis essential before building predictive models? What risks might arise if this step is skipped?
+1. Why is exploratory data analysis (EDA) essential before modeling? What risks might arise if this step is skipped?
 
-2.  If a variable does not show a clear relationship with the target during EDA, should it be excluded from modeling? Consider potential interactions, hidden effects, and the role of feature selection in your response.
+2. If a variable shows no clear relationship with the target during EDA, should it be excluded from modeling? Consider possible interactions or hidden effects.
 
-3.  What does it mean for two variables to be correlated? Explain direction and strength of correlation and contrast correlation with causation using an example.
+3. What does it mean for two variables to be correlated? Explain the direction and strength of correlation, and contrast correlation with causation using an example.
 
-4.  How can you detect and address correlated predictors during EDA? Describe how this helps improve modeling performance and interpretability.
+4. How can you detect and address correlated predictors during EDA? Why is this important for model stability and interpretability?
 
-5.  What are the consequences of including highly correlated variables in a predictive model? Discuss the effects on performance, interpretability, and model stability.
+5. What happens when highly correlated variables are included in a predictive model? Discuss effects on accuracy and interpretability.
 
-6.  Is it always advisable to remove one of two correlated predictors? When might keeping both be justified?
+6. Is it always appropriate to remove one of two correlated predictors? When might keeping both be justified?
 
-7.  For each of the following methods—histograms, box plots, density plots, scatter plots, summary statistics, correlation analysis, contingency tables, bar plots, and heatmaps—state whether it applies to categorical data, numerical data, or both. Briefly describe its use in EDA.
+7. For each method—histograms, box plots, density plots, scatter plots, summary statistics, correlation matrices, contingency tables, bar plots, and heatmaps—indicate whether it applies to categorical, numerical, or both data types.
 
-8.  A telecommunications firm finds that customers with high day and evening minutes tend to churn more. What actions could the company take in response, and how might this guide customer retention?
+8. A telecommunications firm finds that customers with high day and evening minutes tend to churn more. What actions could the company take in response?
 
-9.  Suppose several pairs of variables in a dataset have high correlation (e.g., $r > 0.9$). How would you handle this to ensure robust and interpretable modeling?
+9. Suppose several variable pairs show high correlation ($r > 0.9$). How would you handle this to ensure a robust model?
 
-10. Why is it important to consider both statistical and practical relevance in evaluating correlations? Give an example of a statistically strong but practically weak correlation.
+10. Why should both statistical and practical significance be considered when evaluating correlations? Provide an example of a strong but practically unimportant relationship.
 
-11. Why is it important to investigate multivariate relationships in EDA? Describe a scenario where an interaction between two variables reveals a pattern that univariate analysis would miss.
+11. Why is it important to explore multivariate relationships in EDA? Give an example of an interaction that would be missed by univariate analysis.
 
-12. How does data visualization support EDA? Provide two specific examples where visual tools reveal insights that summary statistics might obscure.
+12. How do visualizations enhance EDA? Provide two examples where visual tools reveal insights that summary statistics cannot.
 
-13. Suppose you discover that customers with both high daytime usage and frequent service calls are more likely to churn. What business strategies might be informed by this finding?
+13. Suppose customers with both high daytime usage and frequent service calls are more likely to churn. What business strategies could be informed by this insight?
 
-14. What are some causes of outliers in data? How would you determine whether to retain, modify, or exclude an outlier?
+14. What causes outliers in data, and how can you decide whether to retain, modify, or exclude them?
 
-15. Why are missing values important to address during EDA? Discuss strategies for handling missing data and when each might be appropriate.
+15. Why must missing values be addressed during EDA? Compare strategies for handling missing data and explain when each is appropriate.
 
-#### Hands-On Practice: Exploring the *bank* Dataset {.unnumbered}
+### Hands-On Practice: Exploring the *bank* Dataset {.unnumbered}
 
-The *bank* dataset from the R package **liver** contains data on direct marketing campaigns of a Portuguese bank. The objective is to predict whether a client subscribes to a term deposit. This dataset will also be used for classification in Chapters [-@sec-ch7-classification-knn] and [-@sec-ch12-neural-networks]. More details: <https://rdrr.io/cran/liver/man/bank.html>
+The *bank* dataset from the **liver** package contains data from direct marketing campaigns of a Portuguese bank. The objective is to predict whether a client subscribes to a term deposit (`deposit = "yes"` or `"no"`). This dataset will reappear in later chapters on classification (Chapter [-@sec-ch7-classification-knn]) and neural networks (Chapter [-@sec-ch12-neural-networks]). For more details about this dataset see  <https://rdrr.io/cran/liver/man/bank.html>.
 
-To load and inspect the dataset:
+Load and inspect the dataset:
 
-``` r
+```r
 library(liver)
 data(bank)
 str(bank)
 ```
 
-16. *Dataset Overview*: Summarize the structure and variable types. What does this reveal about the dataset?
+16. Summarize the structure, number of variables, and their types. What does this reveal about the dataset?
 
-17. *Target Variable Analysis*: Plot the target variable `deposit`. What proportion of clients subscribed to a term deposit?
+17. Visualize the target variable `deposit`. What proportion of clients subscribed to a term deposit?
 
-18. *Binary Variables*: Explore `default`, `housing`, and `loan`. Use bar plots and contingency tables. What patterns emerge?
+18. Explore the binary variables `default`, `housing`, and `loan` using bar plots and contingency tables. What patterns do you observe?
 
-19. *Numerical Variables*: Visualize the distributions of numerical features using histograms and box plots. Note any skewness or unusual observations.
+19. Visualize the distributions of numerical features using histograms and box plots. Note any skewness or unusual observations.
 
-20. *Outlier Detection*: Identify outliers in numerical variables. What strategies would you consider for managing them?
+20. Identify outliers in the numerical variables. What strategies would you consider for handling them?
 
-21. *Correlation Matrix*: Compute and visualize the correlation matrix. Which variables are highly correlated, and how might you address this?
+21. Compute and visualize the correlation matrix. Which variables show strong correlations, and how might you address them before modeling?
 
-22. *Key Findings*: Summarize your main EDA findings. How would you present these in a report?
+22. Summarize your main EDA findings. How would you present these results in a report for a non-technical audience?
 
-23. *Business Insights*: What actionable conclusions could the bank draw from these patterns?
+23. Translate your findings into business insights. What actions could the bank take based on these patterns?
 
-24. *Multivariate Patterns*: Explore whether higher values of `campaign` (number of contacts) relate to greater subscription rates. Visualize and interpret.
+24. Investigate whether higher values of `campaign` (number of contacts) are associated with greater subscription rates. Visualize and interpret your findings.
 
-25. *Feature Engineering Insight*: Based on your findings, propose one new variable that could help improve model performance.
+25. Propose one new derived feature that could improve model performance based on your observations.
 
-26. *Seasonality Effects*: Investigate subscription rates by `month`. Are some months more successful than others?
+26. Examine subscription rates by `month`. Do certain months show higher success rates, and what might explain this pattern?
 
-27. *Employment Type*: How does `job` relate to `deposit`? Which categories have higher success?
+27. Explore the relationship between `job` and `deposit`. Which occupational groups have the highest likelihood of subscription?
 
-28. *Interaction Effects*: Analyze the joint impact of `education` and `job` on subscription. What do you observe?
+28. Analyze the combined effect of `education` and `job` on subscription outcomes. What patterns emerge from this interaction?
 
-29. *Effect of Call Duration*: Does the `duration` of last contact influence deposit outcome?
+29. Examine whether the `duration` of the last contact influences the probability of a term deposit.
 
-30. *Campaign Comparison*: How do success rates vary across campaigns? What strategies might this suggest?
+30. Compare campaign success rates across different contact frequencies. What strategies might the bank adopt to improve future campaign effectiveness?
 
-#### Challenge Problems {.unnumbered}
+### Hands-On Practice: Exploring the *churnTel* Dataset {.unnumbered}
 
-31. *Data Storytelling from EDA*: Create a concise 1–2 plot visual summary of an EDA finding from the *bank* dataset. Focus on making the insight clear to a non-technical audience, using clean annotations and brief explanation.
+The *churnTel* dataset from the **liver** package contains information on 7,043 telecommunications customers and 21 features describing their demographic, contract, and service attributes. The goal is to explore the factors related to customer churn (`churn = "yes"` or `"no"`) and identify patterns that may inform retention strategies.
 
-32. *Segment-Based Risk Profiling*: Use the *adult* dataset to identify a subgroup likely to earn over \$50K. Describe their profile and how you uncovered it through EDA.
+Load and inspect the dataset:
 
-33. *EDA vs. Predictive Modeling*: A variable appears weakly related to the target in univariate plots. Under what conditions could it still improve model accuracy?
+```r
+library(liver)
+data(churnTel)
+str(churnTel)
+```
 
-34. *Exploring Class Imbalance by Subgroup*: Does the proportion of `deposit` outcomes differ by `marital` or `job`? What insights or hypotheses emerge?
+31. Examine the structure of the dataset. Identify the target variable and summarize the main feature types.
 
-35. *Feature Pruning with EDA*: Using the *adult* dataset, identify predictors that may not add value for modeling. Justify your choices with EDA.
+32. Visualize the distribution of the target variable `churn`. What proportion of customers have left the service?
+
+33. Explore categorical variables such as `contract`, `internet.service`, and `payment.method` using bar plots. What trends or imbalances do you observe?
+
+34. Examine numerical variables such as `tenure`, `monthly.charge`, and `total.charges` using histograms and box plots. Identify any skewed distributions or outliers.
+
+35. Analyze the relationship between `tenure` and `churn`. Do long-term customers exhibit lower churn rates?
+
+36. Investigate how `contract` type interacts with churn. Which contract types are associated with higher retention?
+
+37. Compute and visualize correlations among numerical variables. Which pairs show the strongest relationships, and how might this influence model design?
+
+38. Summarize your main findings from the EDA. What patterns stand out, and how might they guide future predictive modeling or business decisions?
+
+### Challenge Problems {.unnumbered}
+
+39. Create a concise, two-plot visual summary that communicates a key insight from your EDA of the *bank* dataset. Focus on clear labeling and a brief caption suitable for presentation to a non-technical audience.
+
+40. Using the *adult* dataset, identify a subgroup of individuals likely to earn over $50K. Describe their demographic and occupational profile and explain how you uncovered it through EDA.
+
+41. A variable appears weakly related to the target in univariate plots. Under what conditions could it still enhance model accuracy? Discuss how this might occur.
+
+42. Examine whether the proportion of `deposit` outcomes differs by `marital` status or `job` category. What insights or hypotheses emerge from this subgroup analysis?
+
+43. Using the *adult* dataset, identify predictors that may contribute little to model performance. Justify your choices using EDA evidence and discuss how pruning such features could improve interpretability and efficiency.
