--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -68,7 +68,7 @@ Each chapter integrates illustrative examples, annotated R code, and exercises t
 
 This book is structured around the *Data Science Workflow*, an iterative framework that guides you from foundational concepts to advanced machine learning techniques through hands-on learning. Your journey begins in Chapter [-@sec-ch1-intro-R], where you will install R, explore its syntax, and work with essential data structures. From there, each chapter builds on the previous one, combining coding practice with real-world case studies to help you gain both understanding and experience.
 
-```{r fig-ch0_DSW, echo = FALSE, out.width="60%", fig.cap = "The Data Science Workflow is an iterative framework for structuring data science and machine learning projects. Inspired by the CRISP-DM model (Cross-Industry Standard Process for Data Mining), it supports systematic problem-solving and continuous refinement."}
+```{r fig-ch0_DSW, echo = FALSE, out.width="70%", fig.cap = "The Data Science Workflow is an iterative framework for structuring data science and machine learning projects. Inspired by the CRISP-DM model (Cross-Industry Standard Process for Data Mining), it supports systematic problem-solving and continuous refinement."}
 knitr::include_graphics("images/ch2_DSW.png")  
 ```
 
@@ -129,7 +129,22 @@ This book integrates real-world datasets to support its applied, hands-on approa
 #| out.width: NULL
 
 datasets = data.frame( 
-  Name = c("churn", "bank", "adult", "risk", "marketing", "house", "diamonds", "cereal", "churnCredit", "churnTel", "caravan", "insurance", "housePrice", "drug", "redWines", "whiteWines"),
+  Name = c("churn", 
+           "bank", 
+           "adult", 
+           "risk", 
+           "marketing", 
+           "house", 
+           "diamonds", 
+           "cereal", 
+           "churnCredit", 
+           "churnTel", 
+           "caravan", 
+           "insurance", 
+           "housePrice", 
+           "drug", 
+           "redWines", 
+           "whiteWines"),
   Description = c(
     "Customer churn dataset.", 
     "Direct marketing data from a Portuguese bank.", 
