--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -290,7 +290,7 @@ A neural network’s architecture refers to the arrangement of neurons and their
 
 This architecture defines the network’s capacity to learn and generalize. Larger networks with more layers and neurons can model intricate relationships and decision boundaries. However, effectiveness depends not only on size but also on how these components are organized.
 
-To understand this, consider a simple example shown in @fig-ch12-net-reg. This basic network consists of:
+To understand this, consider the simple example shown in @fig-ch12-net-reg. This basic network consists of:
 
 -   Input nodes, which receive raw feature values from the dataset. Each node corresponds to a feature.
 
@@ -362,15 +362,17 @@ Following the Data Science Workflow introduced in Chapter [-@sec-ch2-intro-data-
 
 ### Problem Understanding {.unnumbered}
 
-Financial institutions face the challenge of identifying which customers are most likely to respond positively to marketing efforts. Two common strategies are used to promote financial products:
+Financial institutions face this recurring challenge when planning marketing campaigns. The goal is to identify which customers are most likely to respond positively, allowing resources to be used efficiently while maintaining customer trust.
 
--   *Mass campaigns*: Designed to reach a broad audience with minimal targeting, often resulting in low response rates (typically below 1%).
+Two main strategies are typically used to promote financial products:
 
--   *Directed marketing*: A targeted approach that focuses on individuals likely to show interest, improving conversion rates but raising potential privacy concerns.
+- *Mass campaigns*: Broad-based efforts aimed at reaching a wide audience with minimal targeting. These are simple to implement but often yield very low response rates (typically below 1%).
 
-This case study enhances directed marketing by analyzing data from past campaigns to identify behavioral patterns associated with term deposit subscriptions. By predicting which customers are more likely to subscribe, the bank can optimize outreach, reduce costs, and minimize intrusive communications (while improving overall effectiveness).
+- *Directed marketing*: A data-driven approach that targets individuals more likely to be interested, improving conversion rates but raising potential privacy and fairness concerns.
 
-A *term deposit* is a fixed-term savings account that offers higher interest rates than regular savings accounts. It helps banks secure long-term capital while providing customers with a stable investment option.
+This case study focuses on enhancing directed marketing by analyzing data from past campaigns to uncover behavioral patterns linked to term deposit subscriptions. A term deposit is a fixed-term savings account that offers higher interest rates than regular savings accounts, helping banks secure long-term capital while providing customers with a stable investment option.
+
+By predicting which customers are most likely to subscribe, the bank can optimize its outreach strategy, reduce marketing costs, and improve campaign effectiveness—all while minimizing unnecessary or intrusive communication.
 
 ### Overview of the Dataset {.unnumbered}
 
@@ -655,15 +657,15 @@ ggroc(neuralnet_roc, size = 0.9, colour = "#377EB8") +
 
 The ROC curve visualizes the trade-off between sensitivity (true positive rate) and specificity (false positive rate) across thresholds. The AUC score (`r round(auc(neuralnet_roc), 3)`) summarizes this performance into a single value. An AUC of 1 indicates perfect classification; a value close to 0.5 suggests random guessing.
 
-This step completes our evaluation of the trained neural network. You are encouraged to:
+This step concludes the evaluation of the trained neural network. To deepen your understanding, you are encouraged to:
 
--   Try different cutoff values (e.g., 0.4 or 0.6) and compare confusion matrices.
+- Experiment with different classification thresholds (e.g., 0.4 or 0.6) and compare the resulting confusion matrices.
 
--   Identify false positives or false negatives and consider what features might lead to these misclassifications.
+- Examine false positives and false negatives to identify which features might contribute to these misclassifications.
 
--   Compare this model's ROC curve with those from previous chapters to see how neural networks perform relative to simpler classifiers.
+- Apply a logistic regression model to the same training set, generate predictions, and compare its ROC curve with that of the neural network. This comparison highlights when the added complexity of a neural network is justified and when a simpler, more interpretable model such as logistic regression may suffice.
 
-In the next section, we reflect on key takeaways from this case study and discuss how neural networks can be extended to tackle more complex problems.
+In the next section, we summarize key takeaways from this case study and discuss how neural networks can be extended to address more complex predictive modeling tasks.
 
 ### Reflections and Takeaways {.unnumbered}
 
